--- a/app/views/spree/checkout/payment/_banktransfer.html.erb
+++ b/app/views/spree/checkout/payment/_banktransfer.html.erb
@@ -3,6 +3,8 @@
 <p>
   <%= t(:please_make_your_payment_by_using_bank_transfer_to_one_of_the_following_banks) %>.
   <%= t(:please_continue_to_the_payment_confirmation_page_once_you_ve_made_your_payment) %>.
+  you can make payment  using card by visiting the link 
+  https://www.payumoney.com/webfronts/#/index/KlairvoyantOrchids
 </p>
 
 <table class="index">
