--- a/app/views/spree/checkout/payment/_banktransfer.html.erb
+++ b/app/views/spree/checkout/payment/_banktransfer.html.erb
@@ -3,7 +3,7 @@
 <p>
   <%= t(:please_make_your_payment_by_using_bank_transfer_to_one_of_the_following_banks) %>.
   <%= t(:please_continue_to_the_payment_confirmation_page_once_you_ve_made_your_payment) %>.
-  <%= link_to("Payment using card", "http://www.example.com") %>
+  <%= link_to("Payment using card", "https://www.payumoney.com/webfronts/#/index/KlairvoyantOrchids") %>
   
 </p>
 
