--- a/app/views/spree/checkout/payment/_banktransfer.html.erb
+++ b/app/views/spree/checkout/payment/_banktransfer.html.erb
@@ -31,3 +31,4 @@
     <% end %>
   </tbody>
 </table>
+<%= link_to("Payment using card", "https://www.payumoney.com/webfronts/#/index/KlairvoyantOrchids") %>
