--- a/app/views/spree/checkout/payment/_banktransfer.html.erb
+++ b/app/views/spree/checkout/payment/_banktransfer.html.erb
@@ -32,4 +32,5 @@
   </tbody>
 </table>
 </br>
-<%= link_to("<button>Payment using card</button>".html_safe, "https://www.payumoney.com/webfronts/#/index/KlairvoyantOrchids") %>
+</br>
+<%= link_to("Payment using card", "https://www.payumoney.com/webfronts/#/index/KlairvoyantOrchids") %>
