--- a/app/views/spree/checkout/payment/_banktransfer.html.erb
+++ b/app/views/spree/checkout/payment/_banktransfer.html.erb
@@ -33,4 +33,4 @@
 </table>
 </br>
 </br>
-<%= link_to("Payment using card", "https://www.payumoney.com/webfronts/#/index/KlairvoyantOrchids") %>
+<%= link_to("Payment using card", "https://www.payumoney.com/webfronts/#/index/KlairvoyantOrchids",:target => "_blank" ) %>
